# ai-web-scraper

./: pyproject.toml
src/: main.py  parse.py  scrape.py
